INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}
${CMAKE_SOURCE_DIR}/scribus
)

SET(SCRIBUS_DESIGNER_PLUGIN_MOC_CLASSES
scrspinboxplugin.h
../scrspinbox.h
../units.h
)

SET(SCRIBUS_DESIGNER_PLUGIN_SOURCES
scrspinboxplugin.cpp
../scrspinbox.cpp
../units.cpp
)

SET(SCRIBUS_DESIGNER_PLUGIN "scribusdesigner")

#IF(QT4_WRAP_CPP)
  QT4_WRAP_CPP(SCRIBUS_DESIGNER_PLUGIN_MOC_SOURCES ${SCRIBUS_DESIGNER_PLUGIN_MOC_CLASSES})
#ENDIF(QT4_WRAP_CPP)

ADD_LIBRARY(${SCRIBUS_DESIGNER_PLUGIN} SHARED ${SCRIBUS_DESIGNER_PLUGIN_SOURCES} ${SCRIBUS_DESIGNER_PLUGIN_MOC_SOURCES})
TARGET_LINK_LIBRARIES(${SCRIBUS_DESIGNER_PLUGIN}
  ${QT_LIBRARIES}
)

IF(APPLE)
  TARGET_LINK_LIBRARIES(${SCRIBUS_DESIGNER_PLUGIN} "-undefined dynamic_lookup")
ENDIF(APPLE)

# install it manually
#INSTALL(TARGETS ${SCRIBUS_DESIGNER_PLUGIN}
#  LIBRARY
#  DESTINATION ${QT_INSTALL_PLUGINS}
#  PERMISSIONS ${PLUGIN_PERMISSIONS}
#)

# SET_TARGET_PROPERTIES(${SCRIBUS_DESIGNR_PLUGIN} PROPERTIES VERSION "0.0.0")
