EXTRA_DIST = hyph_af.dic hyph_sl.dic hyph_sv.dic hyph_lt.dic hyph_ga.dic hyph_fi.dic hyph_el.dic hyph_cs.dic hyph_de.dic hyph_en.dic hyph_es.dic hyph_fr.dic hyph_it.dic hyph_ru.dic hyph_da.dic hyph_sk.dic hyph_hu.dic hyph_pt.dic hyph_pt_BR.dic hyph_nl.dic hyph_uk.dic hyph_ca.dic README_ca_ES.txt  README_en_EN.txt  README_lt_LT.txt  README_ru_RU_0.txt README_cs_CZ.txt  README_en_GB.txt  README_no_NO.txt  README_sk_SK.txt README_cy_GB.txt  README_es_ES.txt  README_pl_PL.txt  README_sl_SI.txt README_da_DK.txt  README_fi_FI.txt  README_pt_BR.txt  README_sv_SE.txt README_de_DE.txt  README_hu_HU.txt  README_pt_PT.txt  README_uk_UA.txt
