EXTRA_DIST = hyph_af.dic hyph_sl.dic hyph_sv.dic hyph_lt.dic hyph_ga.dic hyph_fi.dic hyph_el.dic hyph_cs.dic hyph_de.dic hyph_en.dic hyph_es.dic hyph_fr.dic hyph_it.dic hyph_ru.dic hyph_da.dic hyph_sk.dic hyph_hu.dic hyph_pt.dic hyph_pt_BR.dic hyph_nl.dic hyph_uk.dic hyph_ca.dic README_ca_ES.txt  README_en_EN.txt  README_lt_LT.txt  README_ru_RU_0.txt README_cs_CZ.txt README_en_GB.txt  README_no_NO.txt  README_sk_SK.txt README_cy_GB.txt  README_es_ES.txt README_pl_PL.txt  README_sl_SI.txt README_da_DK.txt  README_fi_FI.txt  README_pt_BR.txt  README_sv_SE.txt README_de_DE.txt README_de_ol.txt README_hu_HU.txt  README_pt_PT.txt  
README_uk_UA.txt

install-data-local:
	$(mkinstalldirs) $(libdir)/scribus/dicts/
	$(INSTALL_DATA) $(srcdir)/hyph_af.dic $(libdir)/scribus/dicts/hyph_af.dic
	$(INSTALL_DATA) $(srcdir)/hyph_ca.dic $(libdir)/scribus/dicts/hyph_ca.dic
	$(INSTALL_DATA) $(srcdir)/hyph_cs.dic $(libdir)/scribus/dicts/hyph_cs.dic
	$(INSTALL_DATA) $(srcdir)/hyph_da.dic $(libdir)/scribus/dicts/hyph_da.dic
	$(INSTALL_DATA) $(srcdir)/hyph_de.dic $(libdir)/scribus/dicts/hyph_de.dic
	$(INSTALL_DATA) $(srcdir)/hyph_de_ol.dic $(libdir)/scribus/dicts/hyph_de_ol.dic
	$(INSTALL_DATA) $(srcdir)/hyph_el.dic $(libdir)/scribus/dicts/hyph_el.dic
	$(INSTALL_DATA) $(srcdir)/hyph_en.dic $(libdir)/scribus/dicts/hyph_en.dic
	$(INSTALL_DATA) $(srcdir)/hyph_es.dic $(libdir)/scribus/dicts/hyph_es.dic
	$(INSTALL_DATA) $(srcdir)/hyph_fi.dic $(libdir)/scribus/dicts/hyph_fi.dic
	$(INSTALL_DATA) $(srcdir)/hyph_fr.dic $(libdir)/scribus/dicts/hyph_fr.dic
	$(INSTALL_DATA) $(srcdir)/hyph_ga.dic $(libdir)/scribus/dicts/hyph_ga.dic
	$(INSTALL_DATA) $(srcdir)/hyph_hr.dic $(libdir)/scribus/dicts/hyph_hr.dic
	$(INSTALL_DATA) $(srcdir)/hyph_hu.dic $(libdir)/scribus/dicts/hyph_hu.dic
	$(INSTALL_DATA) $(srcdir)/hyph_it.dic $(libdir)/scribus/dicts/hyph_it.dic
	$(INSTALL_DATA) $(srcdir)/hyph_lt.dic $(libdir)/scribus/dicts/hyph_lt.dic
	$(INSTALL_DATA) $(srcdir)/hyph_nl.dic $(libdir)/scribus/dicts/hyph_nl.dic
	$(INSTALL_DATA) $(srcdir)/hyph_nn.dic $(libdir)/scribus/dicts/hyph_nn.dic
	$(INSTALL_DATA) $(srcdir)/hyph_pl.dic $(libdir)/scribus/dicts/hyph_pl.dic
	$(INSTALL_DATA) $(srcdir)/hyph_pt.dic $(libdir)/scribus/dicts/hyph_pt.dic
	$(INSTALL_DATA) $(srcdir)/hyph_pt_BR.dic $(libdir)/scribus/dicts/hyph_pt_BR.dic
	$(INSTALL_DATA) $(srcdir)/hyph_ru.dic $(libdir)/scribus/dicts/hyph_ru.dic
	$(INSTALL_DATA) $(srcdir)/hyph_sk.dic $(libdir)/scribus/dicts/hyph_sk.dic
	$(INSTALL_DATA) $(srcdir)/hyph_sl.dic $(libdir)/scribus/dicts/hyph_sl.dic
	$(INSTALL_DATA) $(srcdir)/hyph_sv.dic $(libdir)/scribus/dicts/hyph_sv.dic
	$(INSTALL_DATA) $(srcdir)/hyph_uk.dic $(libdir)/scribus/dicts/hyph_uk.dic
	$(INSTALL_DATA) $(srcdir)/README_ca_ES.txt $(libdir)/scribus/dicts/README_ca_ES.txt
	$(INSTALL_DATA) $(srcdir)/README_en_EN.txt $(libdir)/scribus/dicts/README_en_EN.txt
	$(INSTALL_DATA) $(srcdir)/README_cs_CZ.txt $(libdir)/scribus/dicts/README_cs_CZ.txt
	$(INSTALL_DATA) $(srcdir)/README_cy_GB.txt $(libdir)/scribus/dicts/README_cy_GB.txt
	$(INSTALL_DATA) $(srcdir)/README_da_DK.txt $(libdir)/scribus/dicts/README_da_DK.txt
	$(INSTALL_DATA) $(srcdir)/README_de_DE.txt $(libdir)/scribus/dicts/README_de_DE.txt
	$(INSTALL_DATA) $(srcdir)/README_de_ol.txt $(libdir)/scribus/dicts/README_de_ol.txt
	$(INSTALL_DATA) $(srcdir)/README_en_EN.txt $(libdir)/scribus/dicts/README_en_EN.txt
	$(INSTALL_DATA) $(srcdir)/README_en_GB.txt $(libdir)/scribus/dicts/README_en_GB.txt
	$(INSTALL_DATA) $(srcdir)/README_es_ES.txt $(libdir)/scribus/dicts/README_es_ES.txt
	$(INSTALL_DATA) $(srcdir)/README_fi_FI.txt $(libdir)/scribus/dicts/README_fi_FI.txt
	$(INSTALL_DATA) $(srcdir)/README_hu_HU.txt $(libdir)/scribus/dicts/README_hu_HU.txt
	$(INSTALL_DATA) $(srcdir)/README_lt_LT.txt $(libdir)/scribus/dicts/README_lt_LT.txt
	$(INSTALL_DATA) $(srcdir)/README_no_NO.txt $(libdir)/scribus/dicts/README_no_NO.txt
	$(INSTALL_DATA) $(srcdir)/README_pl_PL.txt $(libdir)/scribus/dicts/README_pl_PL.txt
	$(INSTALL_DATA) $(srcdir)/README_pt_BR.txt $(libdir)/scribus/dicts/README_pt_BR.txt
	$(INSTALL_DATA) $(srcdir)/README_pt_PT.txt $(libdir)/scribus/dicts/README_pt_PT.txt
	$(INSTALL_DATA) $(srcdir)/README_ru_RU_0.txt $(libdir)/scribus/dicts/README_ru_RU_0.txt
	$(INSTALL_DATA) $(srcdir)/README_sk_SK.txt $(libdir)/scribus/dicts/README_sk_SK.txt
	$(INSTALL_DATA) $(srcdir)/README_sl_SI.txt $(libdir)/scribus/dicts/README_sl_SI.txt
	$(INSTALL_DATA) $(srcdir)/README_sv_SE.txt $(libdir)/scribus/dicts/README_sv_SE.txt
	$(INSTALL_DATA) $(srcdir)/README_uk_UA.txt $(libdir)/scribus/dicts/README_uk_UA.txt


uninstall-local:
	-rm -f $(libdir)/scribus/dicts/hyph_af.dic
	-rm -f $(libdir)/scribus/dicts/hyph_ca.dic
	-rm -f $(libdir)/scribus/dicts/hyph_cs.dic
	-rm -f $(libdir)/scribus/dicts/hyph_da.dic
	-rm -f $(libdir)/scribus/dicts/hyph_de.dic
	-rm -f $(libdir)/scribus/dicts/hyph_de_ol.dic
	-rm -f $(libdir)/scribus/dicts/hyph_el.dic
	-rm -f $(libdir)/scribus/dicts/hyph_en.dic
	-rm -f $(libdir)/scribus/dicts/hyph_es.dic
	-rm -f $(libdir)/scribus/dicts/hyph_fi.dic
	-rm -f $(libdir)/scribus/dicts/hyph_fr.dic
	-rm -f $(libdir)/scribus/dicts/hyph_ga.dic
	-rm -f $(libdir)/scribus/dicts/hyph_hr.dic
	-rm -f $(libdir)/scribus/dicts/hyph_hu.dic
	-rm -f $(libdir)/scribus/dicts/hyph_it.dic
	-rm -f $(libdir)/scribus/dicts/hyph_lt.dic
	-rm -f $(libdir)/scribus/dicts/hyph_nl.dic
	-rm -f $(libdir)/scribus/dicts/hyph_nn.dic
	-rm -f $(libdir)/scribus/dicts/hyph_pl.dic
	-rm -f $(libdir)/scribus/dicts/hyph_pt.dic
	-rm -f $(libdir)/scribus/dicts/hyph_pt_BR.dic
	-rm -f $(libdir)/scribus/dicts/hyph_ru.dic
	-rm -f $(libdir)/scribus/dicts/hyph_sk.dic
	-rm -f $(libdir)/scribus/dicts/hyph_sl.dic
	-rm -f $(libdir)/scribus/dicts/hyph_sv.dic
	-rm -f $(libdir)/scribus/dicts/hyph_uk.dic
	-rm -f $(libdir)/scribus/dicts/README_ca_ES.txt
	-rm -f $(libdir)/scribus/dicts/README_cs_CZ.txt
	-rm -f $(libdir)/scribus/dicts/README_cy_GB.txt
	-rm -f $(libdir)/scribus/dicts/README_da_DK.txt
	-rm -f $(libdir)/scribus/dicts/README_de_DE.txt
	-rm -f $(libdir)/scribus/dicts/README_de_ol.txt
	-rm -f $(libdir)/scribus/dicts/README_en_EN.txt
	-rm -f $(libdir)/scribus/dicts/README_en_GB.txt
	-rm -f $(libdir)/scribus/dicts/README_es_ES.txt
	-rm -f $(libdir)/scribus/dicts/README_fi_FI.txt
	-rm -f $(libdir)/scribus/dicts/README_hu_HU.txt
	-rm -f $(libdir)/scribus/dicts/README_lt_LT.txt
	-rm -f $(libdir)/scribus/dicts/README_no_NO.txt
	-rm -f $(libdir)/scribus/dicts/README_pl_PL.txt
	-rm -f $(libdir)/scribus/dicts/README_pt_BR.txt
	-rm -f $(libdir)/scribus/dicts/README_pt_PT.txt
	-rm -f $(libdir)/scribus/dicts/README_ru_RU_0.txt
	-rm -f $(libdir)/scribus/dicts/README_sk_SK.txt
	-rm -f $(libdir)/scribus/dicts/README_sl_SI.txt
	-rm -f $(libdir)/scribus/dicts/README_sv_SE.txt
	-rm -f $(libdir)/scribus/dicts/README_uk_UA.txt
	
