EXTRA_DIST = hyph_af.dic hyph_sl.dic hyph_sv.dic hyph_lt.dic hyph_ga.dic hyph_fi.dic hyph_el.dic hyph_cs.dic \
             hyph_de.dic hyph_en.dic hyph_es.dic hyph_fr.dic hyph_id.dic hyph_is.dic hyph_it.dic hyph_ru.dic \
             hyph_da.dic hyph_sk.dic hyph_hu.dic hyph_pt.dic hyph_pt_BR.dic hyph_nl.dic hyph_uk.dic hyph_ca.dic \
             README_ca_ES.txt README_en_EN.txt README_id_ID.txt README_is_IS.txt README_lt_LT.txt \
             README_ru_RU_0.txt README_cs_CZ.txt README_en_GB.txt README_no_NO.txt README_sk_SK.txt \
             README_cy_GB.txt README_es_ES.txt README_hyph_pl_PL.txt README_sl_SI.txt README_hyph_da_DK.txt \
             README_fi_FI.txt README_pt_BR.txt README_sv_SE.txt README_de_DE.txt README_hu_HU.txt \
             README_pt_PT.txt README_uk_UA.txt CMakeLists.txt

install-data-local:
	$(mkinstalldirs) $(prefix)/share/scribus/dicts/
	$(INSTALL_DATA) $(srcdir)/hyph_af.dic $(prefix)/share/scribus/dicts/hyph_af.dic
	$(INSTALL_DATA) $(srcdir)/hyph_ca.dic $(prefix)/share/scribus/dicts/hyph_ca.dic
	$(INSTALL_DATA) $(srcdir)/hyph_cs.dic $(prefix)/share/scribus/dicts/hyph_cs.dic
	$(INSTALL_DATA) $(srcdir)/hyph_da.dic $(prefix)/share/scribus/dicts/hyph_da.dic
	$(INSTALL_DATA) $(srcdir)/hyph_de.dic $(prefix)/share/scribus/dicts/hyph_de.dic
	$(INSTALL_DATA) $(srcdir)/hyph_el.dic $(prefix)/share/scribus/dicts/hyph_el.dic
	$(INSTALL_DATA) $(srcdir)/hyph_en.dic $(prefix)/share/scribus/dicts/hyph_en.dic
	$(INSTALL_DATA) $(srcdir)/hyph_es.dic $(prefix)/share/scribus/dicts/hyph_es.dic
	$(INSTALL_DATA) $(srcdir)/hyph_fi.dic $(prefix)/share/scribus/dicts/hyph_fi.dic
	$(INSTALL_DATA) $(srcdir)/hyph_fr.dic $(prefix)/share/scribus/dicts/hyph_fr.dic
	$(INSTALL_DATA) $(srcdir)/hyph_ga.dic $(prefix)/share/scribus/dicts/hyph_ga.dic
	$(INSTALL_DATA) $(srcdir)/hyph_hr.dic $(prefix)/share/scribus/dicts/hyph_hr.dic
	$(INSTALL_DATA) $(srcdir)/hyph_hu.dic $(prefix)/share/scribus/dicts/hyph_hu.dic
	$(INSTALL_DATA) $(srcdir)/hyph_id.dic $(prefix)/share/scribus/dicts/hyph_id.dic
	$(INSTALL_DATA) $(srcdir)/hyph_is.dic $(prefix)/share/scribus/dicts/hyph_is.dic
	$(INSTALL_DATA) $(srcdir)/hyph_it.dic $(prefix)/share/scribus/dicts/hyph_it.dic
	$(INSTALL_DATA) $(srcdir)/hyph_lt.dic $(prefix)/share/scribus/dicts/hyph_lt.dic
	$(INSTALL_DATA) $(srcdir)/hyph_nl.dic $(prefix)/share/scribus/dicts/hyph_nl.dic
	$(INSTALL_DATA) $(srcdir)/hyph_nn.dic $(prefix)/share/scribus/dicts/hyph_nn.dic
	$(INSTALL_DATA) $(srcdir)/hyph_pl.dic $(prefix)/share/scribus/dicts/hyph_pl.dic
	$(INSTALL_DATA) $(srcdir)/hyph_pt.dic $(prefix)/share/scribus/dicts/hyph_pt.dic
	$(INSTALL_DATA) $(srcdir)/hyph_pt_BR.dic $(prefix)/share/scribus/dicts/hyph_pt_BR.dic
	$(INSTALL_DATA) $(srcdir)/hyph_ru.dic $(prefix)/share/scribus/dicts/hyph_ru.dic
	$(INSTALL_DATA) $(srcdir)/hyph_sk.dic $(prefix)/share/scribus/dicts/hyph_sk.dic
	$(INSTALL_DATA) $(srcdir)/hyph_sl.dic $(prefix)/share/scribus/dicts/hyph_sl.dic
	$(INSTALL_DATA) $(srcdir)/hyph_sv.dic $(prefix)/share/scribus/dicts/hyph_sv.dic
	$(INSTALL_DATA) $(srcdir)/hyph_uk.dic $(prefix)/share/scribus/dicts/hyph_uk.dic
	$(INSTALL_DATA) $(srcdir)/README_ca_ES.txt $(prefix)/share/scribus/dicts/README_ca_ES.txt
	$(INSTALL_DATA) $(srcdir)/README_en_EN.txt $(prefix)/share/scribus/dicts/README_en_EN.txt
	$(INSTALL_DATA) $(srcdir)/README_cs_CZ.txt $(prefix)/share/scribus/dicts/README_cs_CZ.txt
	$(INSTALL_DATA) $(srcdir)/README_cy_GB.txt $(prefix)/share/scribus/dicts/README_cy_GB.txt
	$(INSTALL_DATA) $(srcdir)/README_hyph_da_DK.txt $(prefix)/share/scribus/dicts/README_hyph_da_DK.txt
	$(INSTALL_DATA) $(srcdir)/README_de_DE.txt $(prefix)/share/scribus/dicts/README_de_DE.txt
	$(INSTALL_DATA) $(srcdir)/README_en_EN.txt $(prefix)/share/scribus/dicts/README_en_EN.txt
	$(INSTALL_DATA) $(srcdir)/README_en_GB.txt $(prefix)/share/scribus/dicts/README_en_GB.txt
	$(INSTALL_DATA) $(srcdir)/README_es_ES.txt $(prefix)/share/scribus/dicts/README_es_ES.txt
	$(INSTALL_DATA) $(srcdir)/README_fi_FI.txt $(prefix)/share/scribus/dicts/README_fi_FI.txt
	$(INSTALL_DATA) $(srcdir)/README_hu_HU.txt $(prefix)/share/scribus/dicts/README_hu_HU.txt
	$(INSTALL_DATA) $(srcdir)/README_is_IS.txt $(prefix)/share/scribus/dicts/README_hyph_is_IS.txt
	$(INSTALL_DATA) $(srcdir)/README_lt_LT.txt $(prefix)/share/scribus/dicts/README_lt_LT.txt
	$(INSTALL_DATA) $(srcdir)/README_no_NO.txt $(prefix)/share/scribus/dicts/README_no_NO.txt
	$(INSTALL_DATA) $(srcdir)/README_hyph_pl_PL.txt $(prefix)/share/scribus/dicts/README_hyph_pl_PL.txt
	$(INSTALL_DATA) $(srcdir)/README_pt_BR.txt $(prefix)/share/scribus/dicts/README_pt_BR.txt
	$(INSTALL_DATA) $(srcdir)/README_pt_PT.txt $(prefix)/share/scribus/dicts/README_pt_PT.txt
	$(INSTALL_DATA) $(srcdir)/README_ru_RU_0.txt $(prefix)/share/scribus/dicts/README_ru_RU_0.txt
	$(INSTALL_DATA) $(srcdir)/README_sk_SK.txt $(prefix)/share/scribus/dicts/README_sk_SK.txt
	$(INSTALL_DATA) $(srcdir)/README_sl_SI.txt $(prefix)/share/scribus/dicts/README_sl_SI.txt
	$(INSTALL_DATA) $(srcdir)/README_sv_SE.txt $(prefix)/share/scribus/dicts/README_sv_SE.txt
	$(INSTALL_DATA) $(srcdir)/README_uk_UA.txt $(prefix)/share/scribus/dicts/README_uk_UA.txt


uninstall-local:
	-rm -f $(prefix)/share/scribus/dicts/hyph_af.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_ca.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_cs.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_da.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_de.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_el.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_en.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_es.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_fi.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_fr.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_ga.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_hr.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_hu.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_id.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_id_ID.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_is_IS.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_it.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_lt.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_nl.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_nn.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_pl.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_pt.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_pt_BR.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_ru.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_sk.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_sl.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_sv.dic
	-rm -f $(prefix)/share/scribus/dicts/hyph_uk.dic
	-rm -f $(prefix)/share/scribus/dicts/README_ca_ES.txt
	-rm -f $(prefix)/share/scribus/dicts/README_cs_CZ.txt
	-rm -f $(prefix)/share/scribus/dicts/README_cy_GB.txt
	-rm -f $(prefix)/share/scribus/dicts/README_hyph_da_DK.txt
	-rm -f $(prefix)/share/scribus/dicts/README_de_DE.txt
	-rm -f $(prefix)/share/scribus/dicts/README_en_EN.txt
	-rm -f $(prefix)/share/scribus/dicts/README_en_GB.txt
	-rm -f $(prefix)/share/scribus/dicts/README_es_ES.txt
	-rm -f $(prefix)/share/scribus/dicts/README_fi_FI.txt
	-rm -f $(prefix)/share/scribus/dicts/README_hu_HU.txt
	-rm -f $(prefix)/share/scribus/dicts/README_id_ID.txt
	-rm -f $(prefix)/share/scribus/dicts/README_is_IS.txt
	-rm -f $(prefix)/share/scribus/dicts/README_lt_LT.txt
	-rm -f $(prefix)/share/scribus/dicts/README_no_NO.txt
	-rm -f $(prefix)/share/scribus/dicts/README_hyph_pl_PL.txt
	-rm -f $(prefix)/share/scribus/dicts/README_pt_BR.txt
	-rm -f $(prefix)/share/scribus/dicts/README_pt_PT.txt
	-rm -f $(prefix)/share/scribus/dicts/README_ru_RU_0.txt
	-rm -f $(prefix)/share/scribus/dicts/README_sk_SK.txt
	-rm -f $(prefix)/share/scribus/dicts/README_sl_SI.txt
	-rm -f $(prefix)/share/scribus/dicts/README_sv_SE.txt
	-rm -f $(prefix)/share/scribus/dicts/README_uk_UA.txt

	-rmdir $(prefix)/share/scribus/dicts/ 2>/dev/null
